--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,26 @@ jobs:
       run: go generate -v ./...
 
     - name: Build
-      run: go build -v ./...
+      run: CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o webrunner_restapi -ldflags '-w -s' main.go
 
     - name: Test
       run: go test -v ./...
+
+    - name: Docker meta
+      id: meta
+      uses: docker/metadata-action@v3
+      with:
+        images: webgames/pyspark-notebook
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
